# stackmind

./: .gitignore  AGENT_EVOLUTION_REPORT.md  PLAN.md  README.md  pyproject.toml
cli/: __init__.py  decisions.py  doctor.py  init.py  lock.py  main.py  migrate.py  promote.py  shutdown.py  validate.py
docs/: architecture.md  cli-reference.md  getting-started.md  migration-guide.md  protocols.md
examples/minimal/: AGENTS.md  README.md
examples/minimal/.sync/: RUNTIME_VERSION
examples/minimal/.sync/runtime/: TREE.yaml
examples/minimal/.sync/runtime/boot/: claude.boot.yaml
examples/minimal/.sync/work-orders/: INDEX.yaml
incident/: 2026-05-20_local-llm_incident-report.md  2026-05-20_session-65-incident-report.md  2026-05-20_source-code-loss.md
migrations/: __init__.py  v1_0_0_to_v1_1_0.yaml  v1_1_0_to_v1_2_0.yaml
schemas/: __init__.py  boot.schema.json  escalation.schema.json  index.schema.json  migration.schema.json  runtime-version.schema.json  tree.schema.json  work-order.schema.json
templates/: AGENTS.template.md  README.template.md
templates/sync/: PROTOCOL_DIGEST.md  README.template.md  RUNTIME_VERSION.template.yaml  SYSTEM_CONTEXT.template.md
templates/sync/agents/: claude.agent.template.md  codex.agent.template.md  gemini.agent.template.md  gemma.agent.template.md  local-llm.agent.template.md
templates/sync/escalations/: REWORK.template.yaml
templates/sync/runtime/: TREE.template.yaml
templates/sync/runtime/boot/: claude.boot.template.yaml  codex.boot.template.yaml  gemini.boot.template.yaml  gemma.boot.template.yaml  local-llm.boot.template.yaml
templates/sync/work-orders/: INDEX.template.yaml
templates/sync/work-orders/TEMPLATES/: AUDIT.yaml  BUGFIX.yaml  FEATURE.yaml  HOTFIX.yaml  PHASE.yaml  REFACTOR.yaml  RESEARCH.yaml
tests/: __init__.py  test_cli_integration.py  test_decisions.py  test_doctor.py  test_init.py  test_lock.py  test_migrate.py  test_promote.py  test_shutdown.py  test_validate.py
validators/: __init__.py
